tests/src/frontend/typechecking/invalid/abstract_type_const5.sk
base class Foo {
  type T: Test.MixedScalar;
  fun doit(Foo::T): Foo::T;
}
